--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
-    "name": "magento/1.9.0.1",
+    "name": "magento/1.9.1.0",
     "license": "OSL-3.0",
-    "description": "Magento CE",
-    "homepage": "https://github.com/Zookal/magento-ce/tree/magento-1.9.0.1"
+    "description": "Magento CE"
 }
