Repository not necessary as on Packagist

--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "firegento/magento",
     "type": "magento-core",
     "repositories": [
-        {"type": "composer", "url": "http://packages.firegento.com"},
-        {"type": "git", "url": "https://github.com/AydinHassan/magento-core-composer-installer"}
+        {"type": "composer", "url": "http://packages.firegento.com"}
     ],
     "require": {
         "magento-hackathon/magento-composer-installer": "*",
