--- a/composer.json
+++ b/composer.json
@@ -1,99 +1,6 @@
 {
     "name": "firegento/magento",
     "type": "magento-core",
-    "repositories": [
-        {"type": "composer", "url": "http://packages.firegento.com"}
-    ],
-    "require": {
-        "magento-hackathon/magento-composer-installer": "*",
-        "aydin-hassan/magento-core-composer-installer": "*"
-    },
-    "extra": {
-        "map": [
-            [
-                "app",
-                "app"
-            ],
-            [
-                "downloader",
-                "downloader"
-            ],
-            [
-                "errors",
-                "errors"
-            ],
-            [
-                "includes",
-                "includes"
-            ],
-            [
-                "js",
-                "js"
-            ],
-            [
-                "lib",
-                "lib"
-            ],
-            [
-                "media",
-                "media"
-            ],
-            [
-                "pkginfo",
-                "pkginfo"
-            ],
-            [
-                "shell",
-                "shell"
-            ],
-            [
-                "skin",
-                "skin"
-            ],
-            [
-                "var",
-                "var"
-            ],
-            [
-                ".htaccess",
-                ".htaccess"
-            ],
-            [
-                "api.php",
-                "api.php"
-            ],
-            [
-                "cron.php",
-                "cron.php"
-            ],
-            [
-                "cron.sh",
-                "cron.sh"
-            ],
-            [
-                "favicon.ico",
-                "favicon.ico"
-            ],
-            [
-                "get.php",
-                "get.php"
-            ],
-            [
-                "index.php",
-                "index.php"
-            ],
-            [
-                "install.php",
-                "install.php"
-            ],
-            [
-                "mage",
-                "mage"
-            ],
-            [
-                "LICENSE.html",
-                "LICENSE.html"
-            ]
-        ]
-    }
+    "license": ["OSL-3.0", "AFL-3.0"],
+    "description": "Magento CE"
 }
