--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "magento/1.7.0.2",
-    "license": "OSL-3.0",
-    "description": "Magento CE",
-    "homepage": "https://github.com/Zookal/magento-ce/tree/magento-1.7.0.2"
+    "name": "firegento/magento",
+    "type": "magento-core",
+    "license": ["OSL-3.0", "AFL-3.0"],
+    "description": "Magento CE"
 }
